<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/purple_200">

    <ImageView
            android:id="@+id/image2"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/img2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.35000002"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="25dp"/>

    <TextView
        android:id="@+id/title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recipeCrisps"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="0"
        android:layout_marginTop="25dp"
        app:layout_constraintBottom_toTopOf="@+id/image2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/image2"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/international"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/international"
        android:textSize="42sp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/image2"
        app:layout_constraintTop_toBottomOf="@id/image2"/>

    <TextView
        android:id="@+id/cuisine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/cuisine"
        android:textSize="56sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/international"
        app:layout_constraintTop_toBottomOf="@+id/international" />

    <TextView
            android:id="@+id/description2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/description2"
            android:textSize="17sp"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintHeight_percent=".1"
            app:layout_constraintWidth_percent=".5"
            android:layout_marginTop="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/cuisine"
            app:layout_constraintTop_toBottomOf="@+id/cuisine"/>

    <ImageView
        android:id="@+id/tab2"
        android:layout_width="50dp"
        android:layout_height="10dp"
        android:src="@drawable/tab2"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias=".6"
        android:layout_marginLeft="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/description2"
        app:layout_constraintTop_toBottomOf="@+id/description2" />


</androidx.constraintlayout.widget.ConstraintLayout>