<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".main.ForgotFragment"
        android:background="@color/dark_gray">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintWidth_max="450dp">
        <TextView
                android:text="@string/forgot_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/forgotFragment_forgotLabel"
                android:layout_gravity="center_horizontal" android:gravity="center_horizontal"
                android:textColor="@color/light_gray" android:layout_marginTop="25dp"
                android:textSize="25sp" android:layout_marginStart="50dp" android:layout_marginEnd="50dp"
                android:textStyle="bold"/>
        <TextView
                android:text="@string/forgot_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/forgotFragment_forgotDescription"
                android:layout_gravity="center_horizontal" android:gravity="center_horizontal"
                android:textColor="@color/light_gray" android:layout_marginTop="25dp"
                android:textSize="15sp" android:layout_marginStart="50dp" android:layout_marginEnd="50dp"/>
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_gravity="center_horizontal"
                android:layout_marginStart="15dp" android:layout_marginTop="50dp" android:layout_marginEnd="15dp">

            <ProgressBar
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/forgotFragment_progressBar" android:layout_centerInParent="true"
                    android:visibility="invisible" android:scaleX="1.1" android:scaleY="1.1"
                    android:translationZ="10dp"/>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/forgotFragment_emailLabel"
                        android:textStyle="bold" android:textSize="16sp" android:textColor="@color/light_gray"
                        android:text="@string/email_label" android:textAllCaps="true"/>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:inputType="textVisiblePassword"
                        android:ems="10"
                        android:id="@+id/forgotFragment_emailField" android:background="@drawable/rounded_md"
                        android:backgroundTint="@color/black_gray" android:paddingStart="10dp" android:paddingEnd="10dp"
                        android:textColor="@color/white" android:textColorHint="@color/light_gray"
                        android:layout_marginTop="5dp" android:imeOptions="actionDone"/>
            </LinearLayout>
        </RelativeLayout>
        <Button
                android:text="@string/forgot_button"
                android:layout_height="55dp"
                android:id="@+id/forgotFragment_resetButton"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:backgroundTint="@color/orangie"
                android:layout_width="match_parent" android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
                android:layout_marginStart="15dp" android:layout_marginEnd="15dp" android:textColor="@color/white"
                android:layout_marginTop="35dp" android:layout_gravity="center_horizontal"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>